--- a/marks.html
+++ b/marks.html
@@ -6,7 +6,7 @@
 				let sum=0;
 				let length=0;
 				for(let i in retStud.marks) {
-					sum += arr[i]; 
+					sum += Number(arr[i]); 
 					length++;
 				}
 				return sum/length;
